--- a/angular.json
+++ b/angular.json
@@ -70,10 +70,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "iswib-app:build:production"
+              "browserTarget": "iswib-app:build:production"
             },
             "development": {
-              "buildTarget": "iswib-app:build:development"
+              "browserTarget": "iswib-app:build:development"
             }
           },
           "defaultConfiguration": "development"
