--- a/angular.json
+++ b/angular.json
@@ -36,11 +36,11 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "your-project-name:build"
+            "buildTarget": "your-project-name:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "your-project-name:build:production"
+              "buildTarget": "your-project-name:build:production"
             }
           }
         },
