Save current progress

--- a/angular.json
+++ b/angular.json
@@ -16,8 +16,13 @@
             "main": "src/main.ts",
             "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
-            "styles": ["src/styles.scss"],
-            "scripts": []
+            "styles": ["src/styles.scss",
+            "node_modules/leaflet/dist/leaflet.css"],
+            "scripts": [],
+            "assets": [
+              "src/favicon.ico",
+              "src/assets"
+            ]
           },
           "configurations": {
             "production": {
