--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-server": "^19.2.7",
     "@angular/router": "^19.2.7",
     "@angular/ssr": "^19.2.8",
+    "@asymmetrik/ngx-leaflet": "^18.0.1",
     "express": "^4.18.2",
     "leaflet": "^1.9.4",
     "rxjs": "~7.8.0",
