--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
     "@angular/compiler-cli": "^19.2.7",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
+    "@types/jest": "^29.5.14",
+    "@types/leaflet": "^1.9.18",
+    "@types/mocha": "^10.0.10",
     "@types/node": "^18.19.86",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
