--- a/package.json
+++ b/package.json
@@ -14,14 +14,15 @@
     "@angular/common": "^19.2.7",
     "@angular/compiler": "^19.2.7",
     "@angular/core": "^19.2.7",
+    "@angular/fire": "^19.2.0",
     "@angular/forms": "^19.2.7",
     "@angular/platform-browser": "^19.2.7",
     "@angular/platform-browser-dynamic": "^19.2.7",
     "@angular/platform-server": "^19.2.7",
     "@angular/router": "^19.2.7",
     "@angular/ssr": "^19.2.8",
-    "@asymmetrik/ngx-leaflet": "^18.0.1",
     "express": "^4.18.2",
+    "firebase": "^11.8.1",
     "leaflet": "^1.9.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
