--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-server": "^19.2.7",
     "@angular/router": "^19.2.7",
     "@angular/ssr": "^19.2.8",
+    "canvas-confetti": "^1.9.3",
     "express": "^4.18.2",
     "firebase": "^11.9.1",
     "leaflet": "^1.9.4",
@@ -35,6 +36,7 @@
     "@angular/compiler-cli": "^19.2.7",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
+    "@types/leaflet": "^1.9.19",
     "@types/node": "^18.19.86",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
